<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Server Status</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="new_connection">New connection</string>
    <string name="username">Username</string>
    <string name="hostname">IP/Hostname</string>
    <string name="hostname_only">Hostname</string>
    <string name="port">Port</string>
    <string name="path">Path</string>
    <string name="save">Save</string>
    <string name="kernel">Kernel version</string>
    <string name="basic_info">Basic information</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="password">password</string>
    <string name="uptime">Uptime</string>
    <string name="connectErrorTitle">Bad hostname/username/password</string>
    <string name="connectErrorBody">Please check hostname, username, password and path to .php file</string>
    <string name="processes">Top processes</string>
    <string name="refresh">Refresh</string>
    <string name="date">Server date</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_text">This application was created by Andrzej \"jereksel\" Ressel and it\'s licenced under Apache License 2.0. \n\n
It uses following open source libraries: \n
- Android Support v4 library by Google \n
- ShowcaseView by Alex Curran \n
- HoloGraphLibrary by Androguide \n
- ActionBarSherlock by Jake Wharton \n\n
Icons by Icons8
</string>

    <string name="xda">XDA thread</string>

</resources>
